--- a/client/cities/NewCity.html
+++ b/client/cities/NewCity.html
@@ -1,7 +1,7 @@
 <template name="NewCity">
   <div class="new-city-container">
     <form action="index.html" id="inputForm" method="post">
-      <div class="ui input center">
+      <div id="inputDiv" class="ui input center">
         <input type="text" id="input" placeholder="Enter city name...">
         <button type="submit" class="ui button blue" name="button">Enter</button>
       </div>
@@ -10,7 +10,7 @@
       </div>
     </form>
   </div>
-  
+
         <script type="text/javascript">
               function autoCompletePlaces() {
                    const input = document.getElementById('input');
