--- a/client/cities/City.html
+++ b/client/cities/City.html
@@ -1,6 +1,5 @@
 <template name="City">
-
-    <div class="four wide column city">
+    <div style="min-width:150px" class="four wide column city">
       <a href="/city/{{_id}}">
         <h3 id="cityName">{{name}}</h3>
         <div class="">
